// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TrustScoreChip > snapshots > snapshot at rest (high band) 1`] = `
<button
  aria-label="System trust score: 94 of 100, high"
  class="inline-flex cursor-pointer items-center gap-1 rounded-full border px-2 py-0.5 text-xs font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-1 bg-green-500/15 border-green-500/30 text-green-700 dark:text-green-400"
  data-slot="hover-card-trigger"
  data-state="closed"
  data-testid="trust-score-chip"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-shield-check h-3.5 w-3.5 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
    />
    <path
      d="m9 12 2 2 4-4"
    />
  </svg>
  <span>
    Trust 
    94
  </span>
</button>
`;

exports[`TrustScoreChip > snapshots > snapshot low band 1`] = `
<button
  aria-label="System trust score: 60 of 100, low"
  class="inline-flex cursor-pointer items-center gap-1 rounded-full border px-2 py-0.5 text-xs font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-1 bg-red-500/15 border-red-500/30 text-red-700 dark:text-red-400"
  data-slot="hover-card-trigger"
  data-state="closed"
  data-testid="trust-score-chip"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-shield-x h-3.5 w-3.5 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
    />
    <path
      d="m14.5 9.5-5 5"
    />
    <path
      d="m9.5 9.5 5 5"
    />
  </svg>
  <span>
    Trust 
    60
  </span>
</button>
`;

exports[`TrustScoreChip > snapshots > snapshot medium band 1`] = `
<button
  aria-label="System trust score: 75 of 100, medium"
  class="inline-flex cursor-pointer items-center gap-1 rounded-full border px-2 py-0.5 text-xs font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-1 bg-amber-500/15 border-amber-500/30 text-amber-700 dark:text-amber-400"
  data-slot="hover-card-trigger"
  data-state="closed"
  data-testid="trust-score-chip"
  type="button"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-shield-alert h-3.5 w-3.5 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
    />
    <path
      d="M12 8v4"
    />
    <path
      d="M12 16h.01"
    />
  </svg>
  <span>
    Trust 
    75
  </span>
</button>
`;
